apps/hermes-workspace/service-default-hermes-workspace.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-workspace
  namespace: default
  labels:
    app.kubernetes.io/name: hermes-workspace
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hermes-workspace
  ports:
  - name: ssh
    port: 2222
    protocol: TCP
    targetPort: ssh
