apps/hermes-workspace/ciliumnetworkpolicy-default-hermes-workspace.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hermes-workspace
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hermes-workspace
  ingress:
  - fromNodes:
    - matchLabels:
        kubernetes.io/hostname: hestia
    toPorts:
    - ports:
      - port: "2222"
        protocol: TCP
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toCIDRSet:
    - cidr: 0.0.0.0/0
      except:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
      - 169.254.0.0/16
      - 100.64.0.0/10
      - 127.0.0.0/8
      - 224.0.0.0/4
      - 240.0.0.0/4
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
      - port: "443"
        protocol: TCP
  - toNodes:
    - matchLabels:
        kubernetes.io/hostname: hestia
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  - toEntities:
    - host
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      serverNames:
      - git.brmartin.co.uk
